Service.yml
apiVersion: v1
kind: Service
metadata:
  name: test
  labels:
    app: wpprova
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: wpprova
    tier: frontend
  type: NodePort
