Ingress.yml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "wordpress"
  labels:
    app: wpprova
spec:
  tls:
    - hosts:
        - minikube.io
      secretName: tls-certificate
  rules:
    - host: minikube.io
      http:
        paths:
          - path: /
            backend:
              serviceName: wordpress
              servicePort: 80
